0.0300  UNRELEASED      Piotr Roszatycki <dexter@cpan.org>

* Argument raise_failure (default: true) causes that geocode and
  reverse_geocode methods throw error if status is not SUCCESS.
* Slash (/) is replaced with dash (-) in location string.
* Latitude and longitude arguments are not rounded to 5 decimal places
  anymore.

0.0200  2013-08-06      Piotr Roszatycki <dexter@cpan.org>

* New API based on JSON is supported.
* New method for reverse geocoding.


0.0101  2013-07-15      Piotr Roszatycki <dexter@cpan.org>

* Changed URL to http://www.geocodefarm.com/geo.php


0.0100  2013-07-09      Piotr Roszatycki <dexter@cpan.org>

* First CPAN release.
