@@ -5,6 +5,7 @@
 * Slash (/) is replaced with dash (-) in location string.
 * Latitude and longitude arguments are not rounded to 5 decimal places
   anymore.
+* Document query counts and other account information to the API response.
 
 0.0200  2013-08-06      Piotr Roszatycki <dexter@cpan.org>
 
